# Huffman

./: CMakeLists.txt  Tree 2-3-4.c  filetypes.xml  other.xml  project.default.xml  vcs.xml
Huff/: BinaryTree.c  BinaryTree.h  Compress.c  Compress.h  Decompress.c  Decompress.h  Helpful.c  Helpful.h  Huff.c  Huff.h  PQueue.c  PQueue.h  mainHuff.c
Huff/Compress/: BinaryTree.c  BinaryTree.h  PQueue.c  PQueue.h
Plot/: BST.c  BST.h  BinaryTree.c  BinaryTree.h  CMakeLists.txt  LinkedList.c  LinkedList.h  Plot.R  main.c  mainPlot.c
Seminário/: Árvore 2-3-4 - Seminário.pptx
Test - CUnit/: BinaryTree.c  BinaryTree.h  Test-1.c  Teste.c  TesteFila.c  test.c  test1.c
Test - CUnit/cunit/lib/pkgconfig/: cunit.pc
